--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
-group = 'ec.com.example.gateway.services'
+group = 'ec.com.example.gateway'
 version = '1.0.0-SNAPSHOT'
 
 java {
